opa_examples/mongodb_allowed_versions/mongodb_allowed_versions.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: mongodballowedversions
  annotations:
    description: >-
      Requires MongoDB deployment to be within the allowed versions
      
      The setting version should be within the pinned allowed values
spec:
  crd:
    spec:
      names:
        kind: MongoDBAllowedVersions
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package mongodballowedversions

        allowed_versions = ["4.5.0", "5.0.0"]

        violation[{"msg": msg}] {
          version = object.get(input.review.object.spec, "version", "none")
          not q[version]
          msg := sprintf("MongoDB deployment needs to be one of the allowed versions: ", [allowed_versions])
        }

        q[version] { version := allowed_versions[_] }
